@@ -74,5 +74,16 @@ require File.dirname(__FILE__) + '/spec_helper'
     end
   end
   
+  context "Given a controller spec running in #{mode} mode", :context_type => :controller do
+    integrate_views if mode == 'integration'
+    specify "a spec in a context without controller_name set should fail with a useful warning",
+      :should_raise => [
+        Spec::Expectations::ExpectationNotMetError,
+        /You have to declare the controller name in controller specs/
+      ] do
+    end
+  end
+  
+  
 end
 
